--- a/locales/ja.json
+++ b/locales/ja.json
@@ -112,6 +112,7 @@
   },
   "products": {
     "product": {
+      "product_recommendations":"Related Items",
       "add_to_cart": "カートに追加する",
       "description": "商品説明",
       "on_sale": "セール",
@@ -158,6 +159,7 @@
   },
   "templates": {
     "search": {
+      "result_title": "\"{{ terms }}\"の検索結果",
       "no_results": "「{{ terms }}」に一致する結果は見つかりませんでした。スペルを確認するか、別の単語やフレーズを使用してください。",
       "results_with_count": {
         "one": "「{{ terms }}」の検索結果{{ count }}件",
@@ -184,7 +186,11 @@
     },
     "404": {
       "title": "ページが見つかりません",
-      "subtext": "404"
+      "subtext": "404",
+      "title_is": " ページが見つかりません。",
+      "go_home": "ショップのトップページへ",
+      "other_product": "のその他の商品",
+      "categorys": "カテゴリから探す"
     }
   },
   "sections": {
@@ -199,14 +205,27 @@
       }
     },
     "cart": {
-      "title": "あなたのカート",
+      "cart_title": "ショッピングカート",
+      "title": "カートの中身",
+      "product_name": "商品名",
+      "product_list_title": "購入する商品",
+      "product_price": "値段",
+      "product_number": "個数",
+      "product_total_price": "小計",
+      "product_delete": "削除",
       "caption": "カートアイテム",
       "remove_title": "{{ title }}を削除する",
       "subtotal": "小計",
+      "subtotal_product": "商品",
+      "subtotal_product_sp": "商品合計",
+      "shipping_price": "送料",
       "new_subtotal": "新しい小計",
       "note": "注文に関する特別な指示・備考",
       "checkout": "ご購入手続きへ",
-      "empty": "カートは空です",
+      "empty": "ショッピングカートに商品は入っていません。",
+      "empty_info1": "クッキーが無効になっています。",
+      "empty_info2": "ショッピングを続けるにはクッキーを有効にしてください。",
+      "go_shop": "ショップに戻る",
       "cart_error": "カートをアップデートするときにエラーが発生しました。もう一度お試しください。",
       "cart_quantity_error_html": "このアイテムは [数量] 個しかカートに追加することができません。",
       "taxes_and_shipping_policy_at_checkout_html": "税と<a href=\"{{ link }}\">配送料<\/a>は購入手続き時に計算されます",
